Git-2-Tfs Sync. 5dac949 Merged PR 15099: Fixed alignment for table column headers(37417); branch: master ***NO_CI***
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C33232

--- a/v2/shiptech/assets/sass/themes/defaultweb/_aggrid.scss
+++ b/v2/shiptech/assets/sass/themes/defaultweb/_aggrid.scss
@@ -91,7 +91,7 @@
   text-align: center;
   padding-left: 18px;
   .ag-header-cell-text {
-    margin-left: 18px;
+    // margin-left: 18px;
   }
 }
 .aggridtextalign-center {
@@ -454,7 +454,7 @@
 
   .ag-header-cell-label .ag-header-cell-text {
     width: 100%;
-    padding-left: 10px;
+    // padding-left: 10px;
     font-size: 1.214rem;
     font-weight: 300;
     font-style: normal;
